Bug 111073 - Fullscreen: incorrect gif's background (gtk3)
Summary: Fullscreen: incorrect gif's background (gtk3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2017-08-01 23:06 UTC by Xisco Faulí
Modified: 2017-09-06 20:47 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-08-01 23:06:59 UTC
This is a follow-up bug of bug 104141

Steps:
1. Open attachment 128987 [details] from bug 104141
2. go to full-screen

Observed behaviour: gif's background is flashing black and white

Reproduced in

Version: 6.0.0.0.alpha0+
Build ID: 50799a721c7ddcf9475a1b79984ed64ddd7cdf57
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 1 Xisco Faulí 2017-08-01 23:08:10 UTC
I can't reproduce it in

Version: 6.0.0.0.alpha0+
Build ID: e0b6a4a2d2dec4e9614f27fc03f84b1c578028ec
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

(recently introduced)
Comment 2 Aron Budea 2017-08-02 05:15:54 UTC
Confirmed with a recent master build / Ubuntu 17.04.
Comment 3 Xisco Faulí 2017-08-10 21:33:35 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2017-07-26 13:37:40 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2017-07-26 15:58:47 (GMT)
commit d148340babf6c973f7d463909d7a51e16c953248 (patch)
tree 50e0196392d19c51704ade91d1f99924d9df70bb
parent 38df569a66fb038b10c3d1d9890863592c0c29cc (diff)
Resolves: tdf#104141 CAIRO_FORMAT_A1 vs N1BitLsbPal
where vcl transparency is the opposite of cairo's so we've been switching the
source color to the opposite for drawing on CAIRO_FORMAT_A1 and then sucking
out the bits "as-is" to give the right results.

Now instead use the right source color and toggle CAIRO_FORMAT_A1 bitmaps to
N1BitLsbPal in getBitmap.

Then additionally toggle all N1BitLsbPal bitmaps input to drawBitmap to
CAIRO_FORMAT_A1 when making a cairo surface from them.

Bisected with bibisect-linux64-6.0.

Adding Cc: to Caolán McNamara
Comment 4 Caolán McNamara 2017-09-04 16:14:18 UTC
mostly missing the palette entries to state what is black and what is white in the 1 bit depth bitmaps in svp
Comment 5 Commit Notification 2017-09-04 19:53:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=67951d08ddd20ac87fc7eb54a90cb81901a89f8c

Resolves: tdf#111073 incorrect gif background color

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2017-09-06 20:47:58 UTC
Verified in

Version: 6.0.0.0.alpha0+
Build ID: 383aab7ed63bf30931c1cf89138707d2228b5dce
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group